@@ -1,0 +1,4 @@
+EXPECTED_EXIT=65
+cdecl <<END
+declare x as _BitInt(65)
+END
